--- a/B2D_Ventures/templates/index.html
+++ b/B2D_Ventures/templates/index.html
@@ -3,9 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>B2D Ventures</title>
     </head>
     <body>
+        {% if messages %}
+            {{ messages }}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
+        <h1><a href="{% url 'register' %}" class="button">Register</a></h1>
+        {% if user.is_authenticated %}
+            <h1>welcome back {{user.username}}!</h1>
+
+            <form action="{% url 'logout' %}?next=/" method="post">
+                {% csrf_token %}
+                <button type="submit">Logout</button>
+            </form>
+
+        {% else %}
+            <h1>Please log in!</h1>
+            <h1><a href="{% url 'login' %}" class="button">Login</a></h1>
+        {% endif %}
+
         Shikanoko nokonoko koshitantan<br>
         Shikanoko nokonoko koshitantan<br>
         Shikanoko nokonoko koshitantan<br>
