--- a/B2D_Ventures/templates/base.html
+++ b/B2D_Ventures/templates/base.html
@@ -1,8 +1,14 @@
+{% load static %}
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {% block link %}{% endblock %}
+        <link href='https://fonts.googleapis.com/css?family=Urbanist' rel='stylesheet'>
+
+        {% block css_link %}
+            <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        {% endblock %}
+
         <title>{% block title %}B2D Ventures{% endblock %}</title>
     </head>
     <body>
