--- a/B2D_Ventures/templates/register.html
+++ b/B2D_Ventures/templates/register.html
@@ -1,19 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Register Account</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+
+{% comment %} {% block css_link %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+{% endblock %} {% endcomment %}
+
+{% block title %}Register Account{% endblock %}
+
+{% block content %}
     <h2>Register</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Register</button>
+        <button class="generic-button" type="submit">Register</button>
     </form><p>
 
     <h1>
         ERROR:
         {{ form.errors }}
     </h1>
-</body>
-</html>
+{% endblock %}
