--- a/B2D_Ventures/static/css/base.css
+++ b/B2D_Ventures/static/css/base.css
@@ -23,10 +23,43 @@ html {
     font-size: 18px;
 }
 
+/* Make a new navbar css file? */
+#search-box {
+    width: 986px;
+    height: 68px;
+    border-radius: 40px;
+    border: 1px solid #6F6F6F;
+    background-color: #1A1A1A;
+
+    color: #999999;
+    font-weight: 500;
+    font-size: 20px;
+    padding-left: 25px;
+}
+
+#search-button {
+    width: 47px;
+    height: 47px;
+    background-color: #703BF7;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+
+    font-size: 18px;
+}
+
+#profile-img {
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 50%;
+}
+
 /* Fonts */
 
 .heading-font {
-    font-weight: 700; /* Bold weight */
+    font-weight: bold;
     font-size: 36px;
 }
 
