add navbar and left and right button

--- a/B2D_Ventures/static/css/base.css
+++ b/B2D_Ventures/static/css/base.css
@@ -5,6 +5,40 @@ html {
     font-size: 18px;
 }
 
+.navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.navbar-app-name {
+    float: left;
+    font-weight: bold;
+    font-size: 36px;
+}
+
+.navbar-item-left {
+    float: left;
+}
+
+.navbar-link {
+    display: block;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.navbar-link:hover {
+    background-color: #111;
+}
+
+.navbar-item-right {
+    float: right;
+}
+
 .container {
     border: 1px solid #999999;
     border-radius: 12px;
@@ -37,12 +71,24 @@ html {
     padding-left: 25px;
 }
 
-#search-button {
+.purple-button {
     width: 47px;
     height: 47px;
     background-color: #703BF7;
     color: white;
     border: none;
+    border-radius: 50%;
+    cursor: pointer;
+
+    font-size: 18px;
+}
+
+.gray-button {
+    width: 47px;
+    height: 47px;
+    background-color: #1A1A1A;
+    color: #808080;
+    border: 1px solid #999999;
     border-radius: 50%;
     cursor: pointer;
 
