--- a/B2D_Ventures/templates/base.html
+++ b/B2D_Ventures/templates/base.html
@@ -13,9 +13,24 @@
         <title>{% block title %}B2D Ventures{% endblock %}</title>
     </head>
     <body>
-        <input type="text" id="search-box" placeholder="Search...">
-        <button type="submit" id="search-button"><i class="fa fa-search"></i></button>
-        <img id="profile-img" alt="Profile Picture" src="https://64.media.tumblr.com/cff5524eaed3a69e6187d4a8a7bd8417/3eea390ca2b57633-e8/s640x960/e597246a66f8169f886d2807c9d30eac3af2814c.jpg">
+        <ul class="navbar">
+            <li class="navbar-app-name"><a class="navbar-link" href="">B2D Ventures</a></li>
+            <li class="navbar-item-left"><a class="navbar-link" href="">Home</a></li>
+            <li class="navbar-item-left"><a class="navbar-link" href="">Investors</a></li>
+            <li class="navbar-item-left"><a class="navbar-link" href="">Businesses</a></li>
+            <li class="navbar-item-right">
+                <img id="profile-img" alt="Profile Picture" src="https://64.media.tumblr.com/cff5524eaed3a69e6187d4a8a7bd8417/3eea390ca2b57633-e8/s640x960/e597246a66f8169f886d2807c9d30eac3af2814c.jpg">
+            </li>
+        </ul>
+        <input type="text" id="search-box" placeholder="Search for start-up, projects...">
+        <button type="submit" class="purple-button"><i class="fa fa-search"></i></button>
+
+        <button class="gray-button">
+            <i class="fa fa-arrow-left"></i>
+        </button>
+        <button class="gray-button">
+            <i class="fa fa-arrow-right"></i>
+        </button>
         {% block content %}{% endblock %}
     </body>
 </html>
