--- a/B2D_Ventures/templates/index.html
+++ b/B2D_Ventures/templates/index.html
@@ -37,25 +37,53 @@
         </form>
     {% endif %}
 
-    <div class="card">
-        <img class="card-img" alt="Test image"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Fronalpstock_big.jpg/2560px-Fronalpstock_big.jpg"
-        >
-        <p class="content-font">
-            Shikanoko nokonoko koshitantan<br>
-            Shikanoko nokonoko koshitantan<br>
-            Shikanoko nokonoko koshitantan<br>
-            Shikanoko nokonoko koshitantan<br>
-        </p>
-
-        <img class="card-img" alt="Test image"
-            src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
-        >
-
-        <p class="content-font">
-            costantan
-        </p>
+    <div class="card-container">
+        <div class="card-subcontainer">
+            <img class="card-img" alt="Test image"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Fronalpstock_big.jpg/2560px-Fronalpstock_big.jpg"
+            >
+            <p class="card-heading-font">
+                Very long text aaaaaaaaaaaaaaaaaaa
+            </p>
+            <p class="card-content-font">
+                Shikanoko nokonoko koshitantan<br>
+                Shikanoko nokonoko koshitantan<br>
+                Shikanoko nokonoko koshitantan<br>
+                Shikanoko nokonoko koshitantan<br>
+            </p>
+            <button class="generic-button" type="submit">View Details</button>
+        </div>
+        <div class="card-subcontainer">
+            <img class="card-img" alt="Test image"
+                src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
+            >
+            <p class="card-heading-font">
+                Very long text aaaaaaaaaaaaaaaaaaa
+            </p>
+            <p class="card-content-font">
+                costantan
+            </p>
+            <button class="generic-button" type="submit">View Details</button>
+        </div>
+        <div class="card-subcontainer">
+            <img class="card-img" alt="Test image"
+                src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
+            >
+            <p class="card-heading-font">
+                ?
+            </p>
+            <p class="card-content-font">
+                costantana
+            </p>
+            <button class="generic-button" type="submit">View Details</button>
+        </div>
     </div>
+    <button class="gray-button">
+        <i class="fa fa-arrow-left"></i>
+    </button>
+    <button class="gray-button">
+        <i class="fa fa-arrow-right"></i>
+    </button>
 
     <div class="container">
         <div class="heading-font">29000 USD</div>
