--- a/B2D_Ventures/static/css/index.css
+++ b/B2D_Ventures/static/css/index.css
@@ -1,11 +1,34 @@
-.card {
+.card-container {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 1,596px;
+    height: 692px;
+    gap: 10px;
+}
+
+.card-subcontainer {
     border: 1px solid #999999;
     border-radius: 12px;
-    padding: 40px;
 }
 
 .card-img {
-    border-radius: 10px;
-    width: 432px;
-    height: 318px;
+    padding: 30px;
+    padding-bottom: 0px;
+    border-radius: 12px;
+    width: 400px;
+    height: 300px;
+}
+
+.card-heading-font {
+    padding-left: 30px;
+    font-weight: bold;
+    font-size: 36px;
+}
+
+.card-content-font {
+    padding-left: 30px;
+    color: #999999;
+    font-weight: 500;
+    font-size: 18px;
 }
