--- a/B2D_Ventures/templates/index.html
+++ b/B2D_Ventures/templates/index.html
@@ -29,7 +29,15 @@
                 Shikanoko nokonoko koshitantan<br>
                 Shikanoko nokonoko koshitantan<br>
                 Shikanoko nokonoko koshitantan<br>
+
+                Shikanoko nokonoko koshitantan<br>
+                Shikanoko nokonoko koshitantan<br>
+                Shikanoko nokonoko koshitantan<br>
+                Shikanoko nokonoko koshitantan<br>
             </p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 50%;"></div>
+            </div><br>
             <button class="generic-button" type="submit">View Details</button>
         </div>
         <div class="card-subcontainer">
@@ -42,6 +50,9 @@
             <p class="card-content-font">
                 costantan
             </p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 75%;"></div>
+            </div><br>
             <button class="generic-button" type="submit">View Details</button>
         </div>
         <div class="card-subcontainer">
@@ -54,6 +65,9 @@
             <p class="card-content-font">
                 costantana
             </p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 25%;"></div>
+            </div><br>
             <button class="generic-button" type="submit">View Details</button>
         </div>
     </div>
@@ -68,4 +82,5 @@
         <div class="heading-font">29000 USD</div>
         <div class="content-font">Current Funds Raised</div>
     </div>
+
 {% endblock %}
