add image slider function (will adjust size later)

--- a/B2D_Ventures/templates/index.html
+++ b/B2D_Ventures/templates/index.html
@@ -16,6 +16,8 @@
         </ul>
     {% endif %}
 
+    <a href="details">Example Detail Page</a>
+
     <div class="card-container">
         <div class="card-subcontainer">
             <img class="card-img" alt="Test image"
