--- a/B2D_Ventures/templates/details.html
+++ b/B2D_Ventures/templates/details.html
@@ -10,9 +10,27 @@
 {% block content %}
     <div class="slick-carousel-container">
         <div class="slick-carousel">
-            <div>Test</div>
-            <div>Test2</div>
-            <div>Test3</div>
+            {% comment %} <div data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'> {% endcomment %}
+            <div>
+                <span class="heading-font">Test</span>
+                <img src="https://htmlcolorcodes.com/assets/images/colors/red-color-solid-background-1920x1080.png"
+                alt="Red Color Solid Background"
+                >
+            </div>
+            <div>
+                <img src="https://htmlcolorcodes.com/assets/images/colors/yellow-color-solid-background-1920x1080.png"
+                alt="Yellow Color Solid Background"
+                >
+            </div>
+            <div>
+                <p class="heading-font">Test 3</p>
+                <img src="https://htmlcolorcodes.com/assets/images/colors/red-color-solid-background-1920x1080.png"
+                alt="Red Color Solid Background"
+                >
+            </div>
+            <div>
+                
+            </div>
         </div>
     </div>
 
