--- a/B2D_Ventures/static/css/details.css
+++ b/B2D_Ventures/static/css/details.css
@@ -4,6 +4,13 @@
     color: black;
 }
 
+.slick-carousel div * {
+    text-align: center;
+    margin: auto;
+    width: 500px;
+    height: 400px;
+}
+
 .slick-carousel-container {
     width: 100%;
     height: 100px;
@@ -18,6 +25,7 @@
 .slick-dots li.slick-active button {
     background-color: #703BF7;
 }
+
 /* .slider-for div {
     margin: auto;
     padding: 10px;
