change some buttons placement

--- a/B2D_Ventures/templates/index.html
+++ b/B2D_Ventures/templates/index.html
@@ -16,7 +16,7 @@
         </ul>
     {% endif %}
 
-    <a href="details">Example Detail Page</a>
+    <a href={% url 'details' %}>Example Detail Page</a>
 
     <div class="card-container">
         <div class="card-subcontainer">
