--- a/B2D_Ventures/templates/details.html
+++ b/B2D_Ventures/templates/details.html
@@ -10,9 +10,7 @@
 {% block content %}
     <div class="slick-carousel-container">
         <div class="slick-carousel">
-            {% comment %} <div data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'> {% endcomment %}
             <div>
-                <span class="heading-font">Test</span>
                 <img src="https://htmlcolorcodes.com/assets/images/colors/red-color-solid-background-1920x1080.png"
                 alt="Red Color Solid Background"
                 >
@@ -23,13 +21,37 @@
                 >
             </div>
             <div>
-                <p class="heading-font">Test 3</p>
-                <img src="https://htmlcolorcodes.com/assets/images/colors/red-color-solid-background-1920x1080.png"
+                <img src="https://htmlcolorcodes.com/assets/images/colors/bright-green-color-solid-background-1920x1080.png"
                 alt="Red Color Solid Background"
                 >
             </div>
             <div>
-                
+
+            </div>
+        </div>
+    </div>
+
+    <div id="details-short-container">
+        <p class="heading-font">Test</p>
+        <p class="content-font">
+            Arabica Acerbic Affogato Aftertaste Aged Americano And Aroma, bar panna so Barista cortado trifecta extraction, skinny aftertaste filter java cultivar cinnamon. Mazagran trade Barista french and Acerbic acerbic Aged milk cinnamon origin carajillo, mountain coffee roast mug wings Bar single viennese pumpkin go pot, dripper crema flavour mocha At bar sit medium au breve. Espresso Brewed Blue iced Americano robust whipped, bar percolator  grounds go saucer robusta, Au shop Affogato Bar aged coffee, Barista blue strong origin aftertaste. Blue skinny coffee breve Brewed acerbic, siphon steamed And foam, qui Arabica ut latte. Go brewed At aftertaste sweet cinnamon caffeine rich strong caramelization Aftertaste, Body roast body frappuccino Beans extraction sit americano Aroma.
+        </p>
+
+        <button class="generic-button">Start Investment</button>
+        <p></p>
+
+        <div class="card-container">
+            <div class="card-subcontainer">
+                <p class="heading-font">1000 USD</p>
+                <p class="content-font">Mininum Investment</p>
+            </div>
+            <div class="card-subcontainer">
+                <p class="heading-font">40000 USD</p>
+                <p class="content-font">Funding Goal</p>
+            </div>
+            <div class="card-subcontainer">
+                <p class="heading-font">29000 USD</p>
+                <p class="content-font">Current Funds Raised</p>
             </div>
         </div>
     </div>
