--- a/B2D_Ventures/templates/details.html
+++ b/B2D_Ventures/templates/details.html
@@ -31,15 +31,16 @@
         </div>
     </div>
 
-    <div id="details-short-container">
-        <p class="heading-font">Test</p>
+    <div class="details-container">
+        <p class="heading-font">CoffeeFast</p>
         <p class="content-font">
-            Arabica Acerbic Affogato Aftertaste Aged Americano And Aroma, bar panna so Barista cortado trifecta extraction, skinny aftertaste filter java cultivar cinnamon. Mazagran trade Barista french and Acerbic acerbic Aged milk cinnamon origin carajillo, mountain coffee roast mug wings Bar single viennese pumpkin go pot, dripper crema flavour mocha At bar sit medium au breve. Espresso Brewed Blue iced Americano robust whipped, bar percolator  grounds go saucer robusta, Au shop Affogato Bar aged coffee, Barista blue strong origin aftertaste. Blue skinny coffee breve Brewed acerbic, siphon steamed And foam, qui Arabica ut latte. Go brewed At aftertaste sweet cinnamon caffeine rich strong caramelization Aftertaste, Body roast body frappuccino Beans extraction sit americano Aroma.
+            Make coffee, coffee good
         </p>
 
         <button class="generic-button">Start Investment</button>
         <p></p>
 
+        <p class="heading-font">Deal Terms</p>
         <div class="card-container">
             <div class="card-subcontainer">
                 <p class="heading-font">1000 USD</p>
@@ -54,6 +55,32 @@
                 <p class="content-font">Current Funds Raised</p>
             </div>
         </div>
+    </div>
+    <hr>
+    <div class="details-container">
+        <p class="heading-font">About</p>
+        <p class="content-font">
+            Arabica Acerbic Affogato Aftertaste Aged Americano And Aroma, bar panna so Barista cortado trifecta extraction, skinny aftertaste filter java cultivar cinnamon. Mazagran trade Barista french and Acerbic acerbic Aged milk cinnamon origin carajillo, mountain coffee roast mug wings Bar single viennese pumpkin go pot, dripper crema flavour mocha At bar sit medium au breve. Espresso Brewed Blue iced Americano robust whipped, bar percolator  grounds go saucer robusta, Au shop Affogato Bar aged coffee, Barista blue strong origin aftertaste. Blue skinny coffee breve Brewed acerbic, siphon steamed And foam, qui Arabica ut latte. Go brewed At aftertaste sweet cinnamon caffeine rich strong caramelization Aftertaste, Body roast body frappuccino Beans extraction sit americano Aroma.
+        </p>
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/025/282/026/small_2x/stock-of-mix-a-cup-coffee-latte-more-motive-top-view-foodgraphy-generative-ai-photo.jpg"></img>
+        <p class="content-font">
+            Arabica Acerbic Affogato Aftertaste Aged Americano And Aroma, bar panna so Barista cortado trifecta extraction, skinny aftertaste filter java cultivar cinnamon. Mazagran trade Barista french and Acerbic acerbic Aged milk cinnamon origin carajillo, mountain coffee roast mug wings Bar single viennese pumpkin go pot, dripper crema flavour mocha At bar sit medium au breve. Espresso Brewed Blue iced Americano robust whipped, bar percolator  grounds go saucer robusta, Au shop Affogato Bar aged coffee, Barista blue strong origin aftertaste. Blue skinny coffee breve Brewed acerbic, siphon steamed And foam, qui Arabica ut latte. Go brewed At aftertaste sweet cinnamon caffeine rich strong caramelization Aftertaste, Body roast body frappuccino Beans extraction sit americano Aroma.
+        </p>
+        <iframe src="https://www.youtube.com/embed/X9tg3J5OiYU"></iframe>
+    </div>
+    <hr>
+    #TODO change to slick carousel
+    <div class="details-container">
+        <p class="heading-font">Team</p>
+        <p class="content-font">
+            Our Team is best Team
+        </p>
+        <button class="gray-button">
+            <i class="fa fa-arrow-left"></i>
+        </button>
+        <button class="gray-button">
+            <i class="fa fa-arrow-right"></i>
+        </button>
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
