fix carousel css + remove arrow icons

--- a/B2D_Ventures/templates/details.html
+++ b/B2D_Ventures/templates/details.html
@@ -4,6 +4,7 @@
 {% block css_link %}
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="{% static 'css/details.css' %}">
 {% endblock %}
 
@@ -24,9 +25,6 @@
                 <img src="https://htmlcolorcodes.com/assets/images/colors/bright-green-color-solid-background-1920x1080.png"
                 alt="Red Color Solid Background"
                 >
-            </div>
-            <div>
-
             </div>
         </div>
     </div>
@@ -72,15 +70,7 @@
     #TODO change to slick carousel
     <div class="details-container">
         <p class="heading-font">Team</p>
-        <p class="content-font">
-            Our Team is best Team
-        </p>
-        <button class="gray-button">
-            <i class="fa fa-arrow-left"></i>
-        </button>
-        <button class="gray-button">
-            <i class="fa fa-arrow-right"></i>
-        </button>
+        <p class="content-font">Our Team is best Team</p>
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
