--- a/B2D_Ventures/static/css/details.css
+++ b/B2D_Ventures/static/css/details.css
@@ -42,3 +42,23 @@
     margin: auto;
     display: block;
 }
+
+.slick-dots li button:before {
+    color: white;
+}
+
+.slick-dots li.slick-active button:before {
+    opacity: .75;
+    color: white;
+}
+
+.slick-prev,
+.slick-next {
+    width: 600px;
+    height: 600px;
+}
+
+.slick-prev:before, .slick-next:before {
+    font-size: 36px;
+    color: #999999;
+}
