--- a/B2D_Ventures/templates/details.html
+++ b/B2D_Ventures/templates/details.html
@@ -12,6 +12,9 @@
     <div class="slick-carousel-container">
         <div class="slick-carousel">
             <div>
+                <iframe src="https://www.youtube.com/embed/X9tg3J5OiYU"></iframe>
+            </div>
+            <div>
                 <img src="https://htmlcolorcodes.com/assets/images/colors/red-color-solid-background-1920x1080.png"
                 alt="Red Color Solid Background"
                 >
@@ -35,9 +38,6 @@
             Make coffee, coffee good
         </p>
 
-        <button class="generic-button">Start Investment</button>
-        <p></p>
-
         <p class="heading-font">Deal Terms</p>
         <div class="card-container">
             <div class="card-subcontainer">
@@ -53,6 +53,15 @@
                 <p class="content-font">Current Funds Raised</p>
             </div>
         </div>
+
+        <p class="heading-font">Investment Progress: 50%</p>
+        <div class="progress-bar">
+            <div class="progress" style="width: 50%;"></div>
+        </div><br>
+        <p class="heading-font">
+            $565,372 Invested
+        </p>
+        <button class="generic-button">Start Investment</button>
     </div>
     <hr>
     <div class="details-container">
@@ -67,11 +76,32 @@
         <iframe src="https://www.youtube.com/embed/X9tg3J5OiYU"></iframe>
     </div>
     <hr>
-    #TODO change to slick carousel
-    <div class="details-container">
-        <p class="heading-font">Team</p>
-        <p class="content-font">Our Team is best Team</p>
+    <p class="heading-font" style="text-align: center;">Team</p>
+    <div class="card-container">
+        <div class="card-subcontainer">
+            <img class="card-img" alt="Test image"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ13LZQHT6miu4Vcle98i7GiHmBjqyG7hzU4Q&s"
+            >
+            <p class="heading-font">
+                Mr. A
+            </p>
+            <p class="content-font">
+                I have passion
+            </p>
+        </div>
+        <div class="card-subcontainer">
+            <img class="card-img" alt="Test image"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ13LZQHT6miu4Vcle98i7GiHmBjqyG7hzU4Q&s"
+            >
+            <p class="heading-font">
+                Mr. A
+            </p>
+            <p class="content-font">
+                I have passion
+            </p>
+        </div>
     </div>
+
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
