--- a/B2D_Ventures/templates/index.html
+++ b/B2D_Ventures/templates/index.html
@@ -23,10 +23,10 @@
             <img class="card-img" alt="Test image"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Fronalpstock_big.jpg/2560px-Fronalpstock_big.jpg"
             >
-            <p class="card-heading-font">
+            <p class="heading-font">
                 Very long text aaaaaaaaaaaaaaaaaaa
             </p>
-            <p class="card-content-font">
+            <p class="content-font">
                 Shikanoko nokonoko koshitantan<br>
                 Shikanoko nokonoko koshitantan<br>
                 Shikanoko nokonoko koshitantan<br>
@@ -46,10 +46,10 @@
             <img class="card-img" alt="Test image"
                 src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
             >
-            <p class="card-heading-font">
+            <p class="heading-font">
                 Very long text aaaaaaaaaaaaaaaaaaa
             </p>
-            <p class="card-content-font">
+            <p class="content-font">
                 costantan
             </p>
             <div class="progress-bar">
@@ -61,10 +61,10 @@
             <img class="card-img" alt="Test image"
                 src="https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg"
             >
-            <p class="card-heading-font">
+            <p class="heading-font">
                 ?
             </p>
-            <p class="card-content-font">
+            <p class="content-font">
                 costantana
             </p>
             <div class="progress-bar">
