--- a/B2D_Ventures/static/css/details.css
+++ b/B2D_Ventures/static/css/details.css
@@ -13,8 +13,6 @@
 
 .slick-carousel-container {
     padding: 20px;
-    width: 100%;
-    height: 450px;
 }
 
 .slick-dots {
@@ -23,8 +21,8 @@
     font-size: 0px;
 }
 
-.slick-dots li.slick-active button {
-    background-color: #703BF7;
+.slick-dots li button:before{
+    font-size: 12px;
 }
 
 .details-container {
@@ -50,12 +48,6 @@
 .slick-dots li.slick-active button:before {
     opacity: .75;
     color: white;
-}
-
-.slick-prev,
-.slick-next {
-    width: 600px;
-    height: 600px;
 }
 
 .slick-prev:before, .slick-next:before {
